objects/Cross_Dashboard_Filter__c.object
<CustomObject>
    <description>A common custom object referenced to by dashboard filter fields on each reporting object,  linked via a lookup field.   For each dashboard filter field we need a lookup field.  Types are separated with a type picklist field.  Use the name field of the reference object, have a type picklist with Bill Type, Profit Center etc. Then have multiple lookup fields on BBB objects that reference to the same custom object</description>
    <fields>
        <fullName>Filter_Type_and_Value__c</fullName>
        <formula>TEXT(Type__c)  &amp; &apos;: &apos; &amp; Filter_Value__c</formula>
        <label>Filter Type and Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Value__c</fullName>
        <description>The individual value that the dashboard filter row is a reference to.</description>
        <inlineHelpText>i.e. for Bill Type: Direct, POS, or CMA</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of data the filter value is a member of.</description>
        <inlineHelpText>Group like filter values together under one type.  Picklist value should match exactly with SFI.SF_FIELDS.SF_FIELD_DESC in oracle</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill Type</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>SAP Profit Center Code</fullName>
                </value>
                <value>
                    <fullName>SAP Profit Center Short Description</fullName>
                </value>
                <value>
                    <fullName>SAP Profit Center Group Code</fullName>
                </value>
                <value>
                    <fullName>SAP Profit Center Group Short Description</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cross Dashboard Filter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Filter_Type_and_Value__c</columns>
        <columns>Filter_Value__c</columns>
        <columns>Type__c</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Cross Dashboard Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cross Dashboard Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>